# id-car-ocr

./: .gitignore  pyproject.toml
document_scanner/: main.py
